fixed bug in cats-photo which was cased with unnecessary wrap uses

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ h2{
   display: flex;
   justify-content: center;
   height: 500px;
-  flex-wrap: wrap;
+  
   
 }
 
